--- a/public/global.css
+++ b/public/global.css
@@ -2,14 +2,16 @@ html, body {
 	position: relative;
 	width: 100%;
 	height: 100%;
+	
 }
 
 body {
 	color: #333;
 	margin: 0;
-	padding: 8px;
 	box-sizing: border-box;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	background: url('/background.jpg') no-repeat center center fixed;
+	margin-top: 100px;
 }
 
 a {
